Cache ansible-core dependency for sanity test runs
Ansible-core is installed for each (ansibleVersion, pyVersion) pair. It shouldn't matter which python version we're installing Ansible with so long as the Python version is supported.

--- a/.github/workflows/ansible-tests.yml
+++ b/.github/workflows/ansible-tests.yml
@@ -47,6 +47,12 @@ jobs:
         with:
             python-version: ${{env.MIN_PYTHON_VERSION}}
 
+      - name: Cache ansible-core stable-${{ matrix.ansible }} installation
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-build-ansible-${{ matrix.ansible }}-stable
+
       - name: Install ansible-core stable-${{ matrix.ansible }}
         run: pip install https://github.com/ansible/ansible/archive/stable-${{ matrix.ansible }}.tar.gz --disable-pip-version-check
 
